# ChangeLog for dev-vcs/git
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.202 2013/07/09 08:41:23 polynomial-c Exp $

*git-1.8.3.2 (09 Jul 2013)

  09 Jul 2013; Lars Wendler <polynomial-c@gentoo.org> +git-1.8.3.2.ebuild:
  Non-maintainer commit: Version bump (bug #467856). Converted ebuild to EAPI-5
  and python-single-r1 eclass. Added gtk -> python REQUIRED_USE (bug #451374).
  Hopefully fixed test failure with USE=-perl (bug #470592). Added installation
  of git-remote-hg (bug #465808) and git-remote-bzr with USE=python.

  18 May 2013; Fabio Erculiani <lxnay@gentoo.org> git-1.8.2.1.ebuild,
  git-9999.ebuild, +files/git-daemon.socket, +files/git-daemon_at.service:
  add systemd unit supporting socket activation to 1.8.21 and 9999, fix bug
  #468846

  19 Apr 2013; Mike Frysinger <vapier@gentoo.org> git-1.8.2.1.ebuild:
  Add missing pthreads linkage for svn-fe #466178 by Mike Gilbert.

  17 Apr 2013; Robin H. Johnson <robbat2@gentoo.org> git-1.8.2.1.ebuild:
  Bug #466178: better use of variables to make svn-fe always compile right.

*git-1.8.2.1 (16 Apr 2013)

  16 Apr 2013; Robin H. Johnson <robbat2@gentoo.org>
  +files/git-1.8.2-optional-cvs.patch, +files/git-1.8.2-texinfo.patch,
  +git-1.8.2.1.ebuild:
  Verbump. Bug #464210: fix texinfo 5.1 @anchor handling.

  19 Mar 2013; Agostino Sarubbo <ago@gentoo.org> -git-1.7.12-r1.ebuild,
  -git-1.7.12-r2.ebuild, -git-1.7.12.3-r1.ebuild, -git-1.7.12.3.ebuild,
  -git-1.7.12.ebuild, -git-1.8.0-r1.ebuild, -git-1.8.0.ebuild,
  -git-1.8.1.1.ebuild, -git-1.8.1.2.ebuild, -git-1.8.1.4.ebuild,
  -git-1.8.1.ebuild:
  Remove old

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> git-1.8.1.5.ebuild:
  Stable for s390, wrt bug #459158

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> git-1.8.1.5.ebuild:
  Stable for sparc, wrt bug #459158

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> git-1.8.1.5.ebuild:
  Stable for ia64, wrt bug #459158
