@@ -54,25 +54,25 @@ EBUILD git-1.7.8.6.ebuild 14683 SHA256 38f21df5f6abefb90ce93129adacf4b307decd484
 EBUILD git-1.8.0.2.ebuild 17163 SHA256 931df741e5eeccee8c67048dd07074777228a6cb4321518a8150a13fd5ec00f0 SHA512 077d8dace76b90c7486d6e3cdb6d8691a4d6634107c69e672a6c7eb105921265b5b545fa727ca8426f069ecac4decc1b9873da689ef0f15623064a5df497053f WHIRLPOOL 0c46e4baae87498094750fb75dd500e4af8d9c7e2c1c3c4394b45bc78bd91a0cfa73ae20384297799bd2763fd7527be6609c60a92a5e4ce3fa997fea61703e86
 EBUILD git-1.8.1.5.ebuild 17189 SHA256 bec81381b6dc3763d99fa20f6828c844a6b801aa5df41b6b99e07c87ff7c4a3d SHA512 22ee72cb4efff7ab5ff7ae53db9292b4a7e72ea75566e2664b001a8c8a761e7bfa3a4e28d4a7fa4ec777db497a0b56964ca2efdedd11fc2f34c9d9ab37ea335e WHIRLPOOL a5c025332de62d0a1e3832ec8ed1b873e5a44c16b4be41c05292553a4375b41ed996263e4c5ad1dedb800601790084d6ed6e0e010f35cd0ace41fc04b8360439
 EBUILD git-1.8.2.1.ebuild 17612 SHA256 4d80e7d5e92b44281d640770dcc104021494633a6fa945550b5cd8963dd2d733 SHA512 d7de530d0a4cc714c7c11d02af8941912eaefe2e80cc054193e880943ded85a6391e92f38437aadbbaba2623ca789078a776e99ca26e5c98c28a1928e9d1bdc8 WHIRLPOOL 63373a2b5515a02b924c0c811d5dfe67db84b0fc93982d9f5ec4dca81f9d80d15ec4f13fb35d66389cf6234427d736e26b9df85fa8160995cab61c675482e8f8
-EBUILD git-1.8.3.2.ebuild 17390 SHA256 68d0cf5e653eca92fe8303d30bd3a89d99aa4b5153bf76563da28ebc1f0d88de SHA512 972f699fbdb3d688173a859cfd253fc657a5e0a1b944de6920110c89db0c5b6beb19f2695965eb2edc8a75f25cff9de16fa5d13a327cefc48a742ae5d4b77a18 WHIRLPOOL 26873c548b16ad8c034790d56b20e604e5bc53d86782eabe8f5607bf48a76e8094b3cb8032d70c1c1b0cfb1f8c06eeaf0910dd2fd96055a3d96772ba711d59c9
+EBUILD git-1.8.3.2.ebuild 17394 SHA256 e20c979bbfe7897e81e6067d42f1ee1213c1d0beab4ce098d6490f1331a6fa3f SHA512 34610ae1312cc6d55b3679b9b84fd6200e8be69d08626e902faf90223ee9ddb0152cbb2da4f488f5fee25b5f7909eb979e7528493c3e4d7d1a775f353fc664df WHIRLPOOL 7c94c284bbf7ab97f5c2c418b0ba78dcef82e4befcedec2b0b988aafba4e7decc2882b3fd434d207b8def9af53bce2a53caba3e5783e94391509962014c3f68b
 EBUILD git-9999.ebuild 17301 SHA256 38772b0f96d81aaf7b6e31092b677f3c50234b4f7b2cb6eaced06900e32ce350 SHA512 50e9fe76af6195f52dbcd6c787c2943e1ced23f6036f405e17648361ba7da0fbf2026a75f999ba10831ec250c668778b7ee863ca8284e3470d2856548f44e383 WHIRLPOOL 24e52c2af1d6a62f281b253ef88db7b84216ac8a7ee3e79171081f36b18f2ba13c339bca191fed890156766be7cbf575ac203599d9e381c8c1dd85fe15cb8846
-MISC ChangeLog 4963 SHA256 f420b08e163bde603a0768cd4389bb17b66f8439959e462e908f6ba0fc44d696 SHA512 da574b61ed52b7ddee24d3d6fae4b454f94ff5ace63e0053761319efcfc85e4a164d20e1a44d37fa5584020b51f0e1addde34a9f1be7003804ac6a1694b9fa56 WHIRLPOOL 20acb19bc0aeeb83418295d122f855103023ddac94d51c38ae9c17a80f78c3329c5f6d5c32374250d22ed84b17e31bcfe8533c07f2ec7530daac1adaa4164b5a
+MISC ChangeLog 5270 SHA256 328ae94f17f913601a0be95c5a850bf93b77b2f1fc45f8b5f204a22e01bed62a SHA512 2ffe89c87900c189817c844c18fab82db1d5cf8f2d5d08ed06e467f13681da9bd9afc11138c6f3d35dba1757a2831b27aa02713dd62ebcec53755736b90081b0 WHIRLPOOL d3cdb71ae199de65a6d141f13ed4d2d68d37a8ca950ff89248068e8f7d9031d680d4690058e80e698dde64710e85744c7d2af7b816d4dc761403703a32ab57cb
 MISC ChangeLog-2012 94624 SHA256 7c8c313ea4800194191f7255023cabd205e56bb9761e8877dfab3770024b158c SHA512 f19cae0a29e8598e3bb68f1295baa56ff0edf06b2e3a95081ea2f95c4555d63dd6a0bff5a82345b274a1936104a75a69fe7862d7738a7fa2539ec9a7afd6b28f WHIRLPOOL 059ab6c542757c4524cb20cebb3cfa4bfbbe16d3a66da0805fb972d32f91f2a49bee97d1d73acf74d8e2cf3cc7a552371cf66db0580506d4b1a9e05ee52bdea4
 MISC metadata.xml 1821 SHA256 3f0864988fd1d6ca97db612f9157275bf00336143969acb9d82ca6e6523127f5 SHA512 9f2d7adaf973837028f0c7cb305ac9917a88f07490ee172e570fc70860385de5c2b00edd6c22a37c9448d9260f51554e87b32b24e3bbbcc521f9ce5bbcb1fce0 WHIRLPOOL 7c135c44361168708252533d60a05f2c7d4b202c96c212e75d3057fa5ad80928c7d7452359b7e068c7a1f41dd4276c5917ac47ae010ec93821b2a9a3518f7aa9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR28y0AAoJEPiazRVxLXTFpmEP+QGs3T6XIkkKRptFGRHVSrI9
-sTVwQ4yxEU4j+Qkhuqcpw56jonBi1it0P2zEZ8vzWDYh1Hit4+P3wwjnrWf38+Mn
-Go871rgF4/Soohkhf1JJtyY5lXih4skj2gVer7oofgBIqRVoFTYkNzEODgkZYUa0
-ZKwNF824Lk2TaibFAafhS+0AbuFWJvvxi/GwUwoqEld2QlRYNk8CYT6wx10tG+/l
-3G9z+gE8lFCBPLEhyPypPgichcCkaTDnRTowbSLA9d37huHCd/xUXxwQw9tbcmh3
-HN583/EIMZprFHcoKSYEPOtdbp2jBIhH6bJwtoNJGbMxZnrr+9qXNtO5J1qRIFn+
-+0mj+nGzQRJuwq2J2So8cz2uCyrWSK0UvXmRSRHWIUcriyrMYAMbJtbLFKYIBLoW
-F83VimVz2PIAolVx3GvbobQqP5TSHqSDBhSBjabJ2SVUEN/q7xEu90yOhWU4wXME
-RYo4wOvXobLOboGM66rGZyx7prZlsx4rQGOh/dyn4nltqlgldD8RXA636yUoI6iB
-Waxlbmdqvwg0HswqOgbfNfirCha8hdzOYWRNWt9nL/LSqokx7HTIkHZLGrI5cidx
-baoS6d83zYt2gsu4wf22kXpcokAwKiDpA+8PTtT33Nvv47pzqFMGeZaEYxGkoGCf
-N7bZ0KKXOFt2whak/quU
-=u3GK
+iQIcBAEBCAAGBQJR3l4GAAoJEPiazRVxLXTFJY4QAMGO6Xh5OmAPKrq6ClAjvZkB
+eFAU9w4gQ5HQKSQ28w9TnHMkpPSn589YbaGf2A9mwmU5JIP/wBnriFF4OYaVnBeg
+nrsXjNWXP+5AvF+r1xZwd6bftp+UwLXbCNm1WioixFp7BgBiYZlV6zv8DI6i9Rwe
+HR06xbGKBs2GJcU2S4oNtGOKWqgmj1M6EChrGut7m4eF+DllaXFqBp2FdEykvB3b
+ZuI7Dzf/LJBLjdIqlQR1xaMXTh4Jn1kvMiFmthu7NioUqi2BRU8ChLDtv1yPKbD3
+/75SqSCeWi6u+4KEZZt5H0yMGEyqzMesAGV03Kxgg4Irx4kfOKPHr2tIFHg50P05
+ScYW2C98EtdVxIifON1sC97u43m+IumfyzFZmTPrVCajhppjo39osJ1dqF5Cm8Xw
+g8sdYnH8JHr2PfBxpZxhakmB6w1kncfyb3ojceHx/YKYo+0bOl7+Vr7v/DgtEikv
+VtMDR2uosDGdd/CpbuS5+ju3MBgQrm02piaIgeYykxkq1iJWKkzcdqWR41vx5h8k
+VYYW0XxQUUvIHgbxh8/3bKstrvxckPdVnC/GJNPyHKEwnDHrJXPsJ9KMfgX0rgXf
+jXM7dtbyclKUhHVFhfbfcUhpdvrUGEOniB2vDZE1Wp4fBy3UBKhlvtf/DVWil1yC
+nqE2S6JJYf4WErLTsIZE
+=jytg
 -----END PGP SIGNATURE-----
